// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateRouteTree > basic > (0) "/" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
  },
  "pages": {
    "/": </page.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (1) "/other" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/other": <RedirectBoundary>
      <LayoutContent
        name="/other"
      />
    </RedirectBoundary>,
  },
  "pages": {
    "/other": </other/page.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (2) "/not-found" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/not-found": <RedirectBoundary>
      <LayoutContent
        name="/not-found"
      />
    </RedirectBoundary>,
  },
  "pages": {
    "/not-found": <ThrowNotFound
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (3) "/test" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
  },
  "pages": {
    "/test": </test/page.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (4) "/test/other" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
    "/test/other": <RedirectBoundary>
      <LayoutContent
        name="/test/other"
      />
    </RedirectBoundary>,
  },
  "pages": {
    "/test/other": </test/other/page.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (5) "/test/not-found" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
    "/test/not-found": <RedirectBoundary>
      <LayoutContent
        name="/test/not-found"
      />
    </RedirectBoundary>,
  },
  "pages": {
    "/test/not-found": </test/[dynamic]/page.tsx
      params={
        {
          "dynamic": "not-found",
        }
      }
      request={
        {
          "headers": {},
          "url": "https://test.local/test/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;
